--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
             </div>
 
             <div class="nav-cta">
-                <a href="mailto:info@safehaul.io?subject=Demo Request&body=Hi SafeHaul Team,%0A%0AI'd like to schedule a demo of the SafeHaul platform.%0A%0ACompany Name:%0AYour Name:%0APhone:%0A%0AThank you!"
-                    class="btn btn-outline-primary">Schedule Demo</a>
-                <a href="https://t.me/tomr_robins0n" target="_blank" rel="noopener" class="btn btn-primary">Contact
-                    Sales</a>
+                <a href="javascript:void(0)" class="btn btn-outline-primary js-open-lead-modal">Schedule Demo</a>
+                <a href="javascript:void(0)" class="btn btn-primary js-open-lead-modal">Contact Sales</a>
             </div>
 
             <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
@@ -102,7 +100,7 @@
                 </div>
 
                 <div class="hero-cta">
-                    <a href="https://t.me/tomr_robins0n" target="_blank" rel="noopener" class="btn btn-primary btn-lg">
+                    <a href="javascript:void(0)" class="btn btn-primary btn-lg js-open-lead-modal">
                         Get Free Leads Daily
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
@@ -110,14 +108,22 @@
                             <polyline points="12 5 19 12 12 19"></polyline>
                         </svg>
                     </a>
-                    <a href="mailto:info@safehaul.io?subject=Demo Request&body=Hi SafeHaul Team,%0A%0AI'd like to schedule a demo of the SafeHaul platform.%0A%0ACompany Name:%0AYour Name:%0APhone:%0A%0AThank you!"
-                        class="btn btn-outline btn-lg">Schedule a Demo</a>
+                    <a href="javascript:void(0)" class="btn btn-outline btn-lg js-open-lead-modal">Schedule a Demo</a>
                 </div>
             </div>
 
             <div class="hero-visual">
-                <img src="assets/images/hero-dashboard.png" alt="SafeHaul Dashboard Interface"
-                    style="width: 100%; border-radius: var(--radius-2xl); box-shadow: var(--shadow-xl);">
+                <div class="mockup-container bg-primary">
+                    <div class="mockup-window">
+                        <div class="mockup-header">
+                            <span class="mockup-dot red"></span>
+                            <span class="mockup-dot yellow"></span>
+                            <span class="mockup-dot green"></span>
+                        </div>
+                        <img src="assets/images/hero-dashboard.png" alt="SafeHaul Dashboard Interface"
+                            class="mockup-image">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -211,8 +217,17 @@
                     <h3>FREE Daily Driver Leads</h3>
                     <p>Receive 50 pre-qualified driver leads every morning—no strings attached. Fresh contacts delivered
                         directly to your dashboard.</p>
-                    <img src="assets/images/feature-leads.png" alt="Driver Leads Dashboard"
-                        style="width: 100%; border-radius: var(--radius-md); margin-top: var(--space-md); box-shadow: var(--shadow-md);">
+                    <div class="mockup-container bg-emerald">
+                        <div class="mockup-window">
+                            <div class="mockup-header">
+                                <span class="mockup-dot red"></span>
+                                <span class="mockup-dot yellow"></span>
+                                <span class="mockup-dot green"></span>
+                            </div>
+                            <img src="assets/images/feature-leads.png" alt="Driver Leads Dashboard"
+                                class="mockup-image">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Feature 2: Application Tracking -->
@@ -229,8 +244,17 @@
                     <h3>Complete Application Tracking</h3>
                     <p>Manage every driver application from first contact to hire in one centralized dashboard. Never
                         lose track of a candidate again.</p>
-                    <img src="assets/images/feature-tracking.png" alt="Application Tracking Pipeline"
-                        style="width: 100%; border-radius: var(--radius-md); margin-top: var(--space-md); box-shadow: var(--shadow-md);">
+                    <div class="mockup-container bg-blue">
+                        <div class="mockup-window">
+                            <div class="mockup-header">
+                                <span class="mockup-dot red"></span>
+                                <span class="mockup-dot yellow"></span>
+                                <span class="mockup-dot green"></span>
+                            </div>
+                            <img src="assets/images/feature-tracking.png" alt="Application Tracking Pipeline"
+                                class="mockup-image">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Feature 3: Performance Analytics -->
@@ -246,8 +270,17 @@
                     <h3>Recruiter Performance Analytics</h3>
                     <p>Track calls, connections, callbacks, and conversions in real-time. Know exactly who's performing
                         and where to improve.</p>
-                    <img src="assets/images/feature-analytics.png" alt="Performance Analytics Dashboard"
-                        style="width: 100%; border-radius: var(--radius-md); margin-top: var(--space-md); box-shadow: var(--shadow-md);">
+                    <div class="mockup-container bg-purple">
+                        <div class="mockup-window">
+                            <div class="mockup-header">
+                                <span class="mockup-dot red"></span>
+                                <span class="mockup-dot yellow"></span>
+                                <span class="mockup-dot green"></span>
+                            </div>
+                            <img src="assets/images/feature-analytics.png" alt="Performance Analytics Dashboard"
+                                class="mockup-image">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Feature 4: E-Documents -->
@@ -264,8 +297,17 @@
                     <h3>E-Document & Digital Signatures</h3>
                     <p>Send offer letters, contracts, and onboarding docs. Get legally binding signatures in seconds—no
                         third-party tools needed.</p>
-                    <img src="assets/images/feature-documents.png" alt="Digital Signature Interface"
-                        style="width: 100%; border-radius: var(--radius-md); margin-top: var(--space-md); box-shadow: var(--shadow-md);">
+                    <div class="mockup-container bg-primary">
+                        <div class="mockup-window">
+                            <div class="mockup-header">
+                                <span class="mockup-dot red"></span>
+                                <span class="mockup-dot yellow"></span>
+                                <span class="mockup-dot green"></span>
+                            </div>
+                            <img src="assets/images/feature-documents.png" alt="Digital Signature Interface"
+                                class="mockup-image">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Feature 5: Multi-Channel Communication -->
@@ -562,8 +604,8 @@
                         </li>
                     </ul>
 
-                    <a href="https://t.me/tomr_robins0n" target="_blank" rel="noopener"
-                        class="btn btn-outline btn-block">Contact on Telegram</a>
+                    <a href="javascript:void(0)" class="btn btn-outline btn-block js-open-lead-modal">Contact on
+                        Telegram</a>
                 </div>
             </div>
 
@@ -786,8 +828,7 @@
                 </div>
 
                 <div class="final-cta-buttons">
-                    <a href="mailto:info@safehaul.io?subject=Demo Request&body=Hi SafeHaul Team,%0A%0AI'd like to schedule a demo of the SafeHaul platform.%0A%0ACompany Name:%0AYour Name:%0APhone:%0A%0AThank you!"
-                        class="btn btn-primary btn-lg">
+                    <a href="javascript:void(0)" class="btn btn-primary btn-lg js-open-lead-modal">
                         Schedule a Demo
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
@@ -795,7 +836,7 @@
                             <polyline points="12 5 19 12 12 19"></polyline>
                         </svg>
                     </a>
-                    <a href="https://t.me/tomr_robins0n" target="_blank" rel="noopener" class="btn btn-outline btn-lg">
+                    <a href="javascript:void(0)" class="btn btn-outline btn-lg js-open-lead-modal">
                         Talk to Sales
                     </a>
                 </div>
@@ -841,15 +882,83 @@
                 <div class="footer-contact">
                     <h4>Get In Touch</h4>
                     <p><strong>Email:</strong> <a href="mailto:info@safehaul.io">info@safehaul.io</a></p>
-                    <p><strong>Sales:</strong> <a href="https://t.me/tomr_robins0n" target="_blank"
-                            rel="noopener">Telegram</a></p>
+                    <p><strong>Sales:</strong> <a href="javascript:void(0)" class="js-open-lead-modal">Contact Sales</a>
+                    </p>
                 </div>
             </div>
         </div>
     </footer>
 
+    <!-- LEAD GENERATION MODAL -->
+    <div id="leadModal" class="modal-overlay">
+        <div class="modal-container">
+            <button class="modal-close" id="closeModal" aria-label="Close modal">&times;</button>
+            <div class="modal-header">
+                <h3>Get Started with SafeHaul</h3>
+                <p>Fill out the form below and we'll be in touch shortly.</p>
+            </div>
+            <form id="leadForm" class="modal-form">
+                <div class="form-group">
+                    <label for="fullName">Full Name</label>
+                    <input type="text" id="fullName" name="fullName" placeholder="John Doe" required>
+                </div>
+                <div class="form-group">
+                    <label for="workEmail">Work Email</label>
+                    <input type="email" id="workEmail" name="workEmail" placeholder="john@company.com" required>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="companyName">Company Name</label>
+                        <input type="text" id="companyName" name="companyName" placeholder="SafeHaul Logistics"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <label for="companySize">Company Size</label>
+                        <select id="companySize" name="companySize" required>
+                            <option value="" disabled selected>Select size</option>
+                            <option value="1-10">1-10 drivers</option>
+                            <option value="11-50">11-50 drivers</option>
+                            <option value="51-200">51-200 drivers</option>
+                            <option value="201+">201+ drivers</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number (Optional)</label>
+                    <input type="tel" id="phone" name="phone" placeholder="+1 (555) 000-0000">
+                </div>
+                <div class="form-group">
+                    <label for="primaryGoal">Primary Goal</label>
+                    <select id="primaryGoal" name="primaryGoal" required>
+                        <option value="" disabled selected>What are you looking for?</option>
+                        <option value="Get Leads">Get 50 Daily Leads</option>
+                        <option value="Manage Apps">Manage Applications</option>
+                        <option value="E-Docs">E-Signature & Documents</option>
+                        <option value="Other">Other / Talk to Sales</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block btn-lg">Request Access</button>
+                <div id="formStatus" class="form-status"></div>
+            </form>
+
+            <div id="successMessage" class="modal-success" style="display: none;">
+                <div class="success-icon">
+                    <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                        <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                    </svg>
+                </div>
+                <h3>Request Sent!</h3>
+                <p>Thank you for your interest. Our team will contact you via email or phone within 24 hours.</p>
+                <button type="button" class="btn btn-outline" id="successClose">Close Window</button>
+            </div>
+        </div>
+    </div>
+
     <!-- JavaScript -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/contact-form.js"></script>
+    <script src="assets/js/zoom.js"></script>
 </body>
 
 </html>
