--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
         <div class="hero-bg-animation"></div>
         <div class="container hero-container">
             <div class="hero-content">
-                <div class="hero-badge">
+                <div class="verified-badge">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
+                        <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                        <polyline points="22 4 12 14.01 9 11.01"></polyline>
                     </svg>
-                    Powered by SafeHaul Technologies
+                    100% CDL Verified • FMCSA Checked
                 </div>
 
                 <h1 class="hero-title">
@@ -386,7 +387,21 @@
         <div class="container">
             <div class="section-header centered">
                 <span class="section-tag secondary">For Drivers</span>
-                <h2>Find Your Next Opportunity Faster</h2>
+                <h2>Access a Network of High-Intent Drivers</h2>
+                <div class="driver-stats">
+                    <div class="driver-stat-item">
+                        <span class="driver-stat-number">10,000+</span>
+                        <span class="driver-stat-label">Active CDL Holders</span>
+                    </div>
+                    <div class="driver-stat-item">
+                        <span class="driver-stat-number">Daily</span>
+                        <span class="driver-stat-label">New Drivers Added</span>
+                    </div>
+                    <div class="driver-stat-item">
+                        <span class="driver-stat-number">5+ Years</span>
+                        <span class="driver-stat-label">Average Experience</span>
+                    </div>
+                </div>
             </div>
 
             <div class="driver-features">
@@ -436,6 +451,51 @@
                         <polyline points="12 5 19 12 12 19"></polyline>
                     </svg>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- TESTIMONIALS -->
+    <section class="testimonials-section">
+        <div class="container">
+            <div class="section-header centered">
+                <h2>Trusted by Owner-Operators</h2>
+                <p class="section-subtitle">Real results from real trucking companies.</p>
+            </div>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"We spent $50 and hired 2 drivers in the first week. Best money we've
+                        spent in years. Finally a platform that doesn't gouge us."</p>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">MS</div>
+                        <div class="author-info">
+                            <h4>Mike S.</h4>
+                            <p>Owner, Star Line Trucking</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"The SMS texting feature in the Pro plan is a game changer. I text
+                        drivers and get replies instantly. No more phone tag."</p>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">JL</div>
+                        <div class="author-info">
+                            <h4>James L.</h4>
+                            <p>Recruiter, FastLane Logistics</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"I was skeptical about the $1/lead promise, but the quality is actually
+                        better than the expensive boards. Highly recommend."</p>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">TR</div>
+                        <div class="author-info">
+                            <h4>Tom R.</h4>
+                            <p>Fleet Manager, Red Rock Transport</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -526,6 +586,8 @@
                         <span class="price-amount">$50</span>
                         <span class="price-period">/month</span>
                     </div>
+                    <p style="font-size: 0.85rem; opacity: 0.8; margin-bottom: 1rem; margin-top: -0.5rem;">No contract.
+                        Cancel in 1 click.</p>
                     <p class="pricing-description">Everything you need to start hiring drivers.</p>
 
                     <ul class="pricing-features">
@@ -580,6 +642,8 @@
                         <span class="price-amount">$100</span>
                         <span class="price-period">/month</span>
                     </div>
+                    <p style="font-size: 0.85rem; opacity: 0.8; margin-bottom: 1rem; margin-top: -0.5rem;">7-Day
+                        Money-Back Guarantee</p>
                     <p class="pricing-description">Accelerate hiring with SMS and priority support.</p>
 
                     <ul class="pricing-features">
@@ -674,6 +738,51 @@
                     <a href="javascript:void(0)" class="btn btn-outline btn-block js-open-lead-modal">Contact Sales</a>
                     <span class="pricing-ideal">Ideal for Large Fleets (20+ trucks)</span>
                 </div>
+            </div>
+
+            <!-- Comparison Table -->
+            <div class="comparison-table-container">
+                <table class="comparison-table">
+                    <thead>
+                        <tr>
+                            <th>Feature</th>
+                            <th class="center">Basic ($50)</th>
+                            <th class="center">Pro ($100)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Daily Lead Volume</td>
+                            <td class="center">50 Leads</td>
+                            <td class="center">100 Leads</td>
+                        </tr>
+                        <tr>
+                            <td>Lead Freshness</td>
+                            <td class="center">Standard (24h)</td>
+                            <td class="center"><strong>Instant (Real-time)</strong></td>
+                        </tr>
+                        <tr>
+                            <td>ATS & Document Management</td>
+                            <td class="center"><span class="check">✔</span></td>
+                            <td class="center"><span class="check">✔</span></td>
+                        </tr>
+                        <tr>
+                            <td>2-Way SMS Texting</td>
+                            <td class="center"><span class="cross">✘</span></td>
+                            <td class="center"><span class="check">✔</span></td>
+                        </tr>
+                        <tr>
+                            <td>Automated Follow-ups</td>
+                            <td class="center"><span class="cross">✘</span></td>
+                            <td class="center"><span class="check">✔</span></td>
+                        </tr>
+                        <tr>
+                            <td>Priority Support</td>
+                            <td class="center"><span class="cross">✘</span></td>
+                            <td class="center"><span class="check">✔</span></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
             <p class="pricing-trust">Cancel anytime. No long-term contracts.</p>
@@ -1028,6 +1137,54 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/contact-form.js"></script>
     <script src="assets/js/zoom.js"></script>
+
+    <!-- Sticky Mobile CTA -->
+    <div class="sticky-cta">
+        <a href="#pricing" class="btn btn-primary btn-block">Get Started - $50/mo</a>
+    </div>
+
+    <!-- Exit Intent Modal -->
+    <div class="exit-modal" id="exitModal">
+        <div class="exit-modal-content">
+            <button class="exit-modal-close" id="closeExitModal">&times;</button>
+            <h3>Wait! Before you go...</h3>
+            <p>Want to see the quality of drivers in your area before you commit?</p>
+            <div class="mockup-container bg-primary" style="margin-bottom: 1.5rem;">
+                <img src="assets/images/feature-leads.png" alt="Driver List Preview"
+                    style="border-radius: 0.5rem; width: 100%;">
+            </div>
+            <a href="#pricing" class="btn btn-primary btn-lg btn-block">View Plan Options</a>
+            <p style="margin-top: 1rem; font-size: 0.875rem;">Join 500+ companies hiring today.</p>
+        </div>
+    </div>
+
+    <!-- Exit Intent Script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const modal = document.getElementById('exitModal');
+            const closeBtn = document.getElementById('closeExitModal');
+            let hasShown = false;
+
+            // Show on mouseleave (desktop)
+            document.addEventListener('mouseleave', (e) => {
+                if (e.clientY < 0 && !hasShown) {
+                    modal.classList.add('visible');
+                    hasShown = true;
+                }
+            });
+
+            closeBtn.addEventListener('click', () => {
+                modal.classList.remove('visible');
+            });
+
+            // Close when clicking outside
+            modal.addEventListener('click', (e) => {
+                if (e.target === modal) {
+                    modal.classList.remove('visible');
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
