--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#how-it-works" class="nav-link">How It Works</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
                 <a href="#faq" class="nav-link">FAQ</a>
-                <a href="https://app.safehaul.io" class="nav-link" target="_blank" rel="noopener">Log In</a>
+                <a href="https://app.safehaul.io" class="nav-link mobile-only" target="_blank" rel="noopener">Log In</a>
             </div>
 
             <div class="nav-cta">
@@ -629,8 +629,8 @@
                         </li>
                     </ul>
 
-                    <a href="https://app.safehaul.io" target="_blank" rel="noopener"
-                        class="btn btn-primary btn-block">Start Basic Plan</a>
+                    <a href="javascript:void(0)" class="btn btn-primary btn-block js-open-lead-modal">Start Basic
+                        Plan</a>
                     <span class="pricing-ideal">Ideal for Owner-Operators &amp; Small Fleets (1–5 trucks)</span>
                 </div>
 
@@ -684,8 +684,7 @@
                         </li>
                     </ul>
 
-                    <a href="https://app.safehaul.io" target="_blank" rel="noopener"
-                        class="btn btn-primary btn-block">Start Pro Plan</a>
+                    <a href="javascript:void(0)" class="btn btn-primary btn-block js-open-lead-modal">Start Pro Plan</a>
                     <span class="pricing-ideal">Ideal for Growing Fleets (5–20 trucks)</span>
                 </div>
 
