--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?v=2">
 </head>
 
 <body>
